--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,23 +27,17 @@ dist.jar=${dist.dir}/GranolaServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.asm-3.1.jar=lib/asm-3.1.jar
-file.reference.jersey-client-1.17.jar=lib/jersey-client-1.17.jar
-file.reference.jersey-core-1.17.jar=lib/jersey-core-1.17.jar
-file.reference.jersey-multipart-1.17.jar=lib/jersey-multipart-1.17.jar
-file.reference.jersey-server-1.17.jar=lib/jersey-server-1.17.jar
-file.reference.mimepull-1.6.jar=lib/mimepull-1.6.jar
+file.reference.javax.ws.rs-api-2.0.jar=lib/javax.ws.rs-api-2.0.jar
+file.reference.simple-5.1.4.jar=lib/simple-5.1.4.jar
+file.reference.simple-src.jar=lib/simple-src.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.asm-3.1.jar}:\
-    ${file.reference.jersey-client-1.17.jar}:\
-    ${file.reference.jersey-core-1.17.jar}:\
-    ${file.reference.jersey-server-1.17.jar}:\
-    ${file.reference.jersey-multipart-1.17.jar}:\
-    ${file.reference.mimepull-1.6.jar}
+    ${file.reference.javax.ws.rs-api-2.0.jar}:\
+    ${file.reference.simple-5.1.4.jar}:\
+    ${file.reference.simple-src.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
