--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,13 @@ endorsed.classpath=
 excludes=
 file.reference.javax.ws.rs-api-2.0.jar=lib/javax.ws.rs-api-2.0.jar
 file.reference.simple-5.1.4.jar=lib/simple-5.1.4.jar
-file.reference.simple-src.jar=lib/simple-src.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.javax.ws.rs-api-2.0.jar}:\
-    ${file.reference.simple-5.1.4.jar}:\
-    ${file.reference.simple-src.jar}
+    ${file.reference.simple-5.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
