--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,15 @@ dist.jar=${dist.dir}/GranolaServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.ws.rs-api-2.0.jar=lib/javax.ws.rs-api-2.0.jar
-file.reference.simple-5.1.4.jar=lib/simple-5.1.4.jar
+file.reference.grizzly-all.jar=lib/grizzly-all.jar
+file.reference.jersey-all.jar=lib/jersey-all.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.javax.ws.rs-api-2.0.jar}:\
-    ${file.reference.simple-5.1.4.jar}
+    ${file.reference.grizzly-all.jar}:\
+    ${file.reference.jersey-all.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
