Grizzly Server with SVG

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.jar=${dist.dir}/GranolaServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.simple-service-1.0-SNAPSHOT-jar-with-dependencies.jar=lib/simple-service-1.0-SNAPSHOT-jar-with-dependencies.jar
+file.reference.grizzly-service-1.0-SNAPSHOT-jar-with-dependencies.jar=lib/grizzly-service-1.0-SNAPSHOT-jar-with-dependencies.jar
+file.reference.jdom-2.0.5.jar=lib/jdom-2.0.5.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.simple-service-1.0-SNAPSHOT-jar-with-dependencies.jar}
+    ${file.reference.grizzly-service-1.0-SNAPSHOT-jar-with-dependencies.jar}:\
+    ${file.reference.jdom-2.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
