--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.jar=${dist.dir}/GranolaServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.simple-service-1.0-SNAPSHOT-jar-with-dependencies.jar=lib/simple-service-1.0-SNAPSHOT-jar-with-dependencies.jar
+file.reference.jetty-service-1.0-SNAPSHOT-jar-with-dependencies.jar=jetty-service/target/jetty-service-1.0-SNAPSHOT-jar-with-dependencies.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.simple-service-1.0-SNAPSHOT-jar-with-dependencies.jar}
+    ${file.reference.jetty-service-1.0-SNAPSHOT-jar-with-dependencies.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
