--- a/jetty-service/pom.xml
+++ b/jetty-service/pom.xml
@@ -22,6 +22,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.adrianwalker</groupId>
+            <artifactId>multiline-string</artifactId>
+            <version>0.1.1</version> 
+        </dependency>
 <!--        <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-http</artifactId>
@@ -30,7 +35,7 @@
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-jetty-http</artifactId>
             <version>2.11</version> 
-        </dependency> 
+        </dependency>
 <!--        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-simple-http</artifactId>
